--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
         "error"
       ]
     }
+  },
+  "dependencies": {
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "unirest": "^0.6.0"
   }
 }
